--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,8 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17a4fcb8-8bfa-4a58-ba2a-0dcc24e19090",
+   "metadata": {},
+   "source": [
+    "## Import dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "a34131c9-d97d-4b75-a388-6344d94e199e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "070bcba7-c74c-459d-98b6-6cb7110e72e9",
    "metadata": {},
    "outputs": [
@@ -278,7 +286,7 @@
        "[5110 rows x 12 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "77fad204-8093-4f25-88b9-4869f50b3052",
    "metadata": {},
    "outputs": [
@@ -544,7 +552,7 @@
        "[5110 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,8 +569,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b3b99f1-1b05-4e0d-9047-5267142ccbfc",
+   "metadata": {},
+   "source": [
+    "## Missing values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "c26319e9-1ab8-4286-8842-d7eaeac17ca7",
    "metadata": {},
    "outputs": [
@@ -575,7 +591,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5bfb0a25-af7e-4347-9c52-43a2dac74718",
    "metadata": {},
    "outputs": [
@@ -608,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "817b035f-a507-41f3-a0e4-ed1edc73d28d",
    "metadata": {
     "scrolled": true
@@ -631,7 +647,7 @@
        "np.float64(0.03933463796477495)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "13897a6b-43f2-4065-bfa2-4a0a5d030ecc",
    "metadata": {},
    "outputs": [],
@@ -653,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "fc7ec66f-ce53-4735-8b61-af910c5122d2",
    "metadata": {},
    "outputs": [
@@ -881,7 +897,7 @@
        "[4909 rows x 11 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "24f6edb0-3490-4557-a6a2-1550118ba883",
    "metadata": {},
    "outputs": [
@@ -902,7 +918,7 @@
        "4909"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,8 +928,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d68223b1-866a-405d-af7f-891b8cf2995d",
+   "metadata": {},
+   "source": [
+    "## Explore numerical values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "96f9df2a-8288-4dc6-9e63-09d57ef5a64a",
    "metadata": {},
    "outputs": [],
@@ -926,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "e6c92b95-3045-4827-b446-8f2df3fbc450",
    "metadata": {},
    "outputs": [
@@ -936,7 +960,7 @@
        "<Axes: xlabel='age', ylabel='Count'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -957,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "67a7f05b-da28-4d91-bb7a-b7138a49310d",
    "metadata": {},
    "outputs": [
@@ -967,7 +991,7 @@
        "<Axes: xlabel='avg_glucose_level', ylabel='Count'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -988,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "65061d1f-70ab-4d37-a5d2-f2365f787981",
    "metadata": {},
    "outputs": [
@@ -998,7 +1022,7 @@
        "<Axes: xlabel='bmi', ylabel='Count'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1018,8 +1042,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7f09fde-3967-489f-bf58-1f4cfc421ce8",
+   "metadata": {},
+   "source": [
+    "## Resample to manage class imbalance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "29fa53f2-5e0a-4eb2-8b76-6f1314e255f9",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1064,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "69608e39-a3b3-45df-b432-d55c0ab782bd",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1088,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "971cc170-4aba-4bd6-993d-1eb15be3ea3b",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "f1b06998-bd7f-47d4-84ba-04906dbd6633",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "2c280f11-6478-4800-baaa-5fdbe2b86466",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1138,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "f6ab91c8-bbb0-45ed-ae13-422a800d6fdc",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1159,7 @@
        "4909"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "1d2922fc-474b-478b-8965-a7f83beb063f",
    "metadata": {},
    "outputs": [],
@@ -1152,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "9f67058e-d98a-4895-8bc8-eb51ae820d36",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "db9333d8-bae7-4ab8-8fd7-2f5492ddd1f0",
    "metadata": {},
    "outputs": [],
@@ -1180,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "2cf1ad63-eddf-4501-8474-c3762090dfc9",
    "metadata": {},
    "outputs": [],
@@ -1191,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "f8e3fa7d-f801-48d6-bd26-3b95c2917e94",
    "metadata": {},
    "outputs": [],
@@ -1202,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "0ecbccad-9bd4-44af-a11e-a829a51e92af",
    "metadata": {},
    "outputs": [
@@ -1226,19 +1258,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
+   "id": "a8b2db93-74bc-4b5c-b210-cdcbde630c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a01992aa-938a-4a0d-ad2c-ef4957bd0f1d",
+   "metadata": {},
+   "source": [
+    "## Split the resampled dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "c337f050-639f-4a71-a0a8-294f8b0d3afc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the resampled dataset into train and test sets\n",
     "df_full_train, df_test = train_test_split(df_resampled, test_size=0.2, random_state=42)\n",
     "df_train, df_val = train_test_split(df_full_train, test_size=0.25, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "8a787062-e1c0-45c0-9d64-69a0b20da549",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1297,7 @@
        "(875, 292, 292)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "1b4629bd-911d-4819-94af-1e6a531ce776",
    "metadata": {},
    "outputs": [],
@@ -1271,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "2f502463-975e-46c6-8f6e-426eb757e2e5",
    "metadata": {},
    "outputs": [],
@@ -1287,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "4e0c6b55-b231-4438-ad2c-c2e4d785ab14",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1351,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "bfbdfb35-df8a-4f51-8c04-29b08d9ddc03",
    "metadata": {},
    "outputs": [],
@@ -1323,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "839b7d26-576c-4ad1-a560-a36591938672",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1390,7 @@
        "np.float64(0.12805852011330188)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "6a94114e-7b85-400d-8768-70d513a8379b",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1411,7 @@
        "np.float64(0.019469972535403307)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "24f0f65b-65bc-4ac7-abdc-91ea9ef710a2",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1432,7 @@
        "np.float64(0.018559395347854904)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "a81a3b29-9c5d-4599-85da-e20f9fd7ea9e",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1461,7 @@
        "np.float64(0.3984980821527289)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "e5a58654-2d76-46f2-948c-e92376eb83cf",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "f72271d4-9486-40b1-b217-aa5bf273f344",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1498,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
