--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1466,6 +1466,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0236ff8f-c7e0-46c9-84dc-bb503d8a6343",
+   "metadata": {},
+   "source": [
+    "## Linear regression training "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
    "id": "72a64d46-2ab5-4ec8-80cd-66c82c14e1ef",
@@ -1946,6 +1954,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e141aa9-8892-4e56-913e-906a5355ace3",
+   "metadata": {},
+   "source": [
+    "## Parameter tuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "id": "edbc18f5-0a64-473c-ad6b-54fa495d69fe",
@@ -2183,6 +2199,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf89125e-0de8-4b2e-ba16-5397c86d3b98",
+   "metadata": {},
+   "source": [
+    "## Random tree training and tuning parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 146,
    "id": "1d07e209-d3ab-4b21-93df-c548699b8c64",
@@ -2395,6 +2419,14 @@
     "             label='min_samples_leaf=%d' % s)\n",
     "\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f84ab730-fce0-468f-b610-97f0d1c4d6ff",
+   "metadata": {},
+   "source": [
+    "## Final model"
    ]
   },
   {
